# iodisco-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md  alle_rust_dateien.txt
.devcontainer/: devcontainer.json
benches/: discovery_benchmark.rs
examples/: advanced_discovery.rs  api_only_example.rs  debug_device.rs  debug_profile_match.rs  embedded_minimal.rs  libgpuinfo_ioctls.rs  simple_info.rs  test_ioctls.rs  test_new_ioctls.rs  test_version_magic.rs
gpuinfo/: Cargo.toml
gpuinfo-bin/: Cargo.toml
gpuinfo-bin/src/: main.rs
gpuinfo-minimal/: Cargo.toml
gpuinfo-minimal/src/: main.rs
gpuinfo/src/: main.rs
iodisco-bin/: Cargo.toml
iodisco-bin/src/: main.rs
src/: api.rs  error.rs  lib.rs
src/discovery/: analyzer.rs  mod.rs  scanner.rs
src/mappings/: adreno.rs  mali.rs  mod.rs
src/profiles/: adreno.rs  mali.rs  mod.rs
tests/: integration.rs
