[package]
name = "iodisco"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A unified, lightweight Rust library for querying GPU hardware metadata on Linux and Android systems via IOCTL discovery"
repository = "https://github.com/devrimdevelopment/iodisco"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "gpu",
    "ioctl",
    "discovery",
    "mali",
    "adreno",
    "android",
    "linux",
    "embedded",
    "hardware",
]
categories = ["hardware-support", "os", "embedded"]
rust-version = "1.70"

[package.metadata.docs.rs]
features = ["mali", "adreno", "discovery"]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["mali", "adreno"]
api-only = []                          # Minimal: no IOCTL scanning, just profile matching
mali = []                              # ARM Mali support
adreno = []                            # Qualcomm Adreno support
discovery = ["libc", "chrono"]         # IOCTL discovery engine (needs libc)
full = ["mali", "adreno", "discovery"]

# Platform-specific optimizations
linux = []
android = []

[dependencies]
# Core dependencies (ALWAYS required for basic API)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Optional dependencies (feature-gated)
libc = { version = "0.2", optional = true, default-features = false }
chrono = { version = "0.4", optional = true, features = ["serde"] }
anyhow = { version = "1.0", optional = true }
rayon = { version = "1.8", optional = true }
clap = { version = "4.0", optional = true, features = [
    "derive",
    "env",
    "wrap_help",
] }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
bytes = { version = "1.5", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
pretty_assertions = "1.4"
rstest = "0.18"
mockall = "0.14.0"
serial_test = "3.0"

# Examples
[[example]]
name = "simple_info"
path = "examples/simple_info.rs"
required-features = ["mali"]

[[example]]
name = "advanced_discovery"
path = "examples/advanced_discovery.rs"
required-features = ["discovery"]

[[example]]
name = "test_ioctls"
path = "examples/test_ioctls.rs"
required-features = ["discovery"]

[[example]]
name = "libgpuinfo_ioctls"
path = "examples/libgpuinfo_ioctls.rs"
required-features = ["discovery"]

[[example]]
name = "debug_device"
path = "examples/debug_device.rs"
required-features = ["discovery"]

[[example]]
name = "test_new_ioctls"
path = "examples/test_new_ioctls.rs"
required-features = ["discovery"]

[[example]]
name = "test_version_magic"
path = "examples/test_version_magic.rs"
required-features = ["discovery"]

[[example]]
name = "debug_profile_match"
path = "examples/debug_profile_match.rs"
required-features = ["discovery"]

[[example]]
name = "embedded_minimal"
path = "examples/embedded_minimal.rs"
required-features = ["mali"]

[[example]]
name = "api_only_example"
path = "examples/api_only_example.rs"
required-features = ["api-only"]

# Benchmarks
[[bench]]
name = "discovery_benchmark"
path = "benches/discovery_benchmark.rs"
harness = false
required-features = ["discovery"]

# Tests
[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

# Profiles
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.embedded]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.minimal]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 16
strip = "debuginfo"

[badges]
maintenance = { status = "actively-developed" }
